--- a/simple-date.panl.properties
+++ b/simple-date.panl.properties
@@ -208,7 +208,7 @@ solr.default.query.operand=-
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.limit=100
+solr.facet.limit=1000
 
 #                        The Minimum Facet Value Count
 #                        --- ------- ----- ----- -----
@@ -330,7 +330,7 @@ panl.date.S.days=\ days
 panl.date.S.hours=\ hours
 
 # <field "indexed"="true" "stored"="true" "name"="text_date" "type"="string" "multiValued"="false" />
-panl.facet.t=text_date
+panl.field.t=text_date
 panl.name.t=Text Date
 panl.type.t=solr.StrField
 # The following two properties are optional and the values should be changed
@@ -372,7 +372,6 @@ panl.type.T=solr.TextField
 
 panl.lpse.order=z,\
 S,\
-t,\
 T,\
 q,\
 p,\
