Start of next/previous with updates to solr config, schema and data

--- a/simple-date.panl.properties
+++ b/simple-date.panl.properties
@@ -208,7 +208,7 @@ solr.default.query.operand=-
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.limit=1000
+solr.facet.limit=100
 
 #                        The Minimum Facet Value Count
 #                        --- ------- ----- ----- -----
@@ -337,6 +337,38 @@ panl.type.t=solr.StrField
 #panl.prefix.t=prefix
 #panl.suffix.t=suffix
 
+# <field "indexed"="true" "stored"="true" "name"="year" "type"="pint" "multiValued"="false" />
+panl.facet.y=year
+panl.name.y=Year
+panl.type.y=solr.IntPointField
+# The following two properties are optional and the values should be changed
+#panl.prefix.y=prefix
+#panl.suffix.y=suffix
+
+# <field "indexed"="true" "stored"="true" "name"="month" "type"="string" "multiValued"="false" />
+panl.facet.m=month
+panl.name.m=Month
+panl.type.m=solr.StrField
+# The following two properties are optional and the values should be changed
+#panl.prefix.m=prefix
+#panl.suffix.m=suffix
+
+# <field "indexed"="true" "stored"="true" "name"="day" "type"="pint" "multiValued"="false" />
+panl.facet.d=day
+panl.name.d=Day
+panl.type.d=solr.IntPointField
+# The following two properties are optional and the values should be changed
+#panl.prefix.d=prefix
+#panl.suffix.d=suffix
+
+# <field "indexed"="true" "stored"="true" "name"="day_of_week" "type"="string" "multiValued"="false" />
+panl.facet.D=day_of_week
+panl.name.D=Day Of Week
+panl.type.D=solr.StrField
+# The following two properties are optional and the values should be changed
+#panl.prefix.D=prefix
+#panl.suffix.D=suffix
+
 # <field "indexed"="true" "stored"="true" "name"="text" "type"="text_general" "multiValued"="true" />
 panl.facet.T=text
 panl.name.T=Text
@@ -372,7 +404,11 @@ panl.type.T=solr.TextField
 
 panl.lpse.order=z,\
 S,\
-T,\
+t,\
+y,\
+m,\
+d,\
+D,\
 q,\
 p,\
 n,\
@@ -392,7 +428,7 @@ o
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.ignore=
+panl.lpse.ignore=S,i
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
@@ -414,15 +450,18 @@ panl.lpse.ignore=
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.results.fields.default=id,\
-solr_date,\
+panl.results.fields.default=solr_date,\
 text_date,\
+year,\
+month,\
+day,\
+day_of_week,\
 text
 
-panl.results.fields.firstfive=id,\
-solr_date,\
+panl.results.fields.firstfive=solr_date,\
 text_date,\
-text
+year,\
+month
 
 #                      Panl Sort Field Configuration
 #                      ---- ---- ----- -------------
@@ -432,4 +471,4 @@ text
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.sort.fields=
+panl.sort.fields=solr_date
