Refactored params and facets into separate packages for fields and tokens

--- a/simple-date.panl.properties
+++ b/simple-date.panl.properties
@@ -428,7 +428,7 @@ o
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.ignore=S,i
+panl.lpse.ignore=i
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
