--- a/panl.properties
+++ b/panl.properties
@@ -123,5 +123,6 @@ panl.status.500.verbose=true
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.collection.simple-date=simple-date.panl.properties
+panl.collection.mechanical-pencils=mechanical-pencils.panl.properties
 
 
