--- a/src/main/resources/panl.properties.template
+++ b/src/main/resources/panl.properties.template
@@ -75,7 +75,7 @@ solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 # for production (or perhaps just disallow access to it).
 #
 # The URI paths are __ALWAYS__
-#     /panl-results-viewer/ - for testing the queries, facets, and results
+#     /panl-results-viewer/    - for testing the queries, facets, and results
 #     /panl-results-explainer/ - for explaining LPSE encoded URIs and describing
 #                                the configuration for the Panl server.
 #
@@ -103,7 +103,7 @@ panl.status.500.verbose=true
 # Each property file defines a singular collection, with the associated
 # properties and configuration.  The format of the property is:
 #
-#     panl.collection.<solr_collection_name>=properties_file_location>
+#     panl.collection.<solr_collection_name>=<properties_file_location>
 #
 # Where:
 #       <solr_collection_name> is the collection to query on the Solr server
