Added in OR facet processing

--- a/panl.properties
+++ b/panl.properties
@@ -123,6 +123,7 @@ panl.status.500.verbose=true
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.collection.simple-date=simple-date.panl.properties
-panl.collection.mechanical-pencils=mechanical-pencils.panl.properties
+panl.collection.mechanical-pencils=mechanical-pencils.panl.properties,\
+  src/dist/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
 
 
