--- a/panl.properties
+++ b/panl.properties
@@ -122,8 +122,9 @@ panl.status.500.verbose=true
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.collection.simple-date=simple-date.panl.properties
-panl.collection.mechanical-pencils=mechanical-pencils.panl.properties,\
-  src/dist/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
+#panl.collection.simple-date=simple-date.panl.properties
+#panl.collection.mechanical-pencils=mechanical-pencils.panl.properties,\
+#  src/dist/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
+panl.collection.mechanical-pencils=src/dist/panl/mechanical-pencils/mechanical-pencils.panl.properties
 
 
