--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ repositories {
 }
 
 dependencies {
-	// note - the following map to the solrj dependencies
-	implementation 'org.eclipse.jetty.http2:http2-server:9.4.54.v20240208'
-	implementation 'org.eclipse.jetty:jetty-servlet:9.4.54.v20240208'
+	// HTTP server
+	implementation 'org.eclipse.jetty.http2:http2-server:10.0.20'
+	implementation 'org.eclipse.jetty:jetty-servlet:10.0.20'
 
 	// solrj
 	implementation 'org.apache.solr:solr-solrj:8.11.3'
