Updated viewer to prevent enter on previous/next date range.
Fixed addition of date range and sorting URI generation.
Updated image and readme

--- a/panl.properties
+++ b/panl.properties
@@ -122,11 +122,12 @@ panl.status.500.verbose=true
 #
 #                                ~ ~ ~ * ~ ~ ~
 
+panl.collection.mechanical-pencils=src/dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties
 #panl.collection.simple-date=simple-date.panl.properties
 #panl.collection.mechanical-pencils=mechanical-pencils.panl.properties,\
 #  src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
-panl.collection.mechanical-pencils=src/dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
-    src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
+#panl.collection.mechanical-pencils=src/dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
+#    src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
 panl.collection.simple-date=src/dist/sample/panl/simple-date/simple-date.panl.properties
 
 
