added images to the dataset

--- a/src/book/mechanical-pencils.panl.properties
+++ b/src/book/mechanical-pencils.panl.properties
@@ -599,7 +599,8 @@ panl.results.fields.browse=brand,\
   name,\
   category,\
   mechanism_type,\
-  weight
+  weight,\
+  variants
 
 
 #                      Panl Sort Field Configuration
