--- a/src/book/mechanical-pencils.panl.properties
+++ b/src/book/mechanical-pencils.panl.properties
@@ -380,7 +380,7 @@ panl.name.c=Cap Shape
 panl.type.c=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="category" "type"="string" "multiValued"="false" />
-panl.facet.C=category
+panl.field.C=category
 panl.name.C=Category
 panl.type.C=solr.StrField
 
@@ -400,7 +400,7 @@ panl.name.d=Diameter
 panl.type.d=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
-panl.facet.w=weight
+panl.field.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
 panl.suffix.w=\ grams
@@ -422,13 +422,13 @@ panl.name.R=Relative Weight
 panl.type.R=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_length" "type"="pint" "multiValued"="false" />
-panl.facet.L=lead_length
+panl.field.L=lead_length
 panl.name.L=Maximum Allowed Lead Length
 panl.type.L=solr.IntPointField
 panl.suffix.L=mm
 
 # <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
-panl.facet.D=disassemble
+panl.field.D=disassemble
 panl.name.D=Disassemble
 panl.type.D=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
@@ -447,22 +447,27 @@ panl.name.t=Tubing Material
 panl.type.t=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="hardness_indicator" "type"="string" "multiValued"="false" />
-panl.facet.h=hardness_indicator
+panl.field.h=hardness_indicator
 panl.name.h=Hardness Indicator
 panl.type.h=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="in_built_eraser" "type"="boolean" "multiValued"="false" />
-panl.facet.I=in_built_eraser
+panl.field.I=in_built_eraser
 panl.name.I=In Built Eraser
 panl.type.I=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-#panl.bool.I.true=true
-#panl.bool.I.false=false
+panl.bool.I.true=Has in-built eraser
+panl.bool.I.false=No in-built eraser
 
 # <field "indexed"="true" "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
 panl.field.v=variants
 panl.name.v=Variants
 panl.type.v=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
+panl.field.S=images
+panl.name.S=Images
+panl.type.S=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="nib_shape" "type"="string" "multiValued"="false" />
 panl.field.e=nib_shape
@@ -495,17 +500,17 @@ panl.name.f=Cap Material
 panl.type.f=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_grade_indicator" "type"="string" "multiValued"="false" />
-panl.facet.u=lead_grade_indicator
+panl.field.u=lead_grade_indicator
 panl.name.u=Lead Grade Indicator
 panl.type.u=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_size_indicator" "type"="string" "multiValued"="false" />
-panl.facet.Z=lead_size_indicator
+panl.field.Z=lead_size_indicator
 panl.name.Z=Lead Size Indicator
 panl.type.Z=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="in_built_sharpener" "type"="boolean" "multiValued"="false" />
-panl.facet.9=in_built_sharpener
+panl.field.9=in_built_sharpener
 panl.name.9=In Built Sharpener
 panl.type.9=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
@@ -600,7 +605,9 @@ panl.results.fields.browse=brand,\
   category,\
   mechanism_type,\
   weight,\
-  variants
+  variants,\
+  images,\
+  grip_shape
 
 
 #                      Panl Sort Field Configuration
