--- a/src/main/resources/panl_collection_uri.panl.properties.template
+++ b/src/main/resources/panl_collection_uri.panl.properties.template
@@ -35,9 +35,9 @@
 # The following characters may be used in the url for the encoding of the     #
 # facets and queries.                                                         #
 #                                                                             #
-#        A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                  #
-#        a b c d e f g h i j k l m n o p q r s t u v w x y z                  #
-#        0 1 2 3 4 5 6 7 8 9                                                  #
+#             A B C D E F G H I J K L M N O P Q R S T U V W X Y Z             #
+#             a b c d e f g h i j k l m n o p q r s t u v w x y z             #
+#             0 1 2 3 4 5 6 7 8 9                                             #
 #                                                                             #
 # The following are reserved characters and __MUST__ not be used as they are  #
 # modifiers that the Panl server users, or are reserved for future use.       #
@@ -251,7 +251,7 @@ solr.numrows.default=10
 #          ------- -- ------ ------ ------- ---- --------- ------
 # This controls whether Solr will surround found search query text with markup,
 # with the markup being defined in the solrconfig.xml file (see line ~1060 in
-# the included sample configuration files.
+# the included sample configuration files).
 #
 # The default for this is false, i.e.
 #
