Start of editor (hidden features)

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
 
 
-
+	implementation "com.formdev:flatlaf:3.5.1"
 
 
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
