--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -346,6 +346,7 @@ solr.highlight=false
 #     panl.range.max.value.<lpse_code>=<max_value_replacement>
 #     panl.range.min.wildcard.<lpse_code>=<true_or_false>
 #     panl.range.max.wildcard.<lpse_code>=<true_or_false>
+#     panl.range.suppress.<lpse_code>=<true_or_false>
 #
 # Notes:
 #     panl.range.facet.<lpse_code>
@@ -373,6 +374,10 @@ solr.highlight=false
 #     panl.range.max.wildcard.<lpse_code>
 #         (Optional) If the maximum value acts as a wildcard (and therefore
 #         will also include values which are greater than this value)
+#     panl.range.suppress.<lpse_code>
+#         (Optional) By default, panl will return a range and the individual
+#         values for a facet. Setting this to true will only return the range
+#         values.
 #
 #                                ~ ~ ~ * ~ ~ ~
 #
