Start of panl editor GUI

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	// additional utilities
 	implementation 'commons-io:commons-io:2.16.1'
 	implementation 'org.json:json:20240303'
+	implementation 'net.harawata:appdirs:1.2.2'
 
 	// testing
 	testImplementation platform('org.junit:junit-bom:5.9.1')
