moved log4j out of the jar file

--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,13 @@ distributions {
 	}
 }
 
+//
+// Exclude the Log4J configuration
+//
+jar {
+	exclude('log4j2.xml')
+}
+
 
 test {
 	useJUnitPlatform()
