fixed code comments start of log4j configuration

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ repositories {
 	mavenCentral()
 }
 
+java {
+		toolchain {
+				languageVersion = JavaLanguageVersion.of(11)
+		}
+}
+
 sourceSets {
 	integrationTest {
 		java {
