Editor with the start of editing the panl.properties files, plus nicer gui updates

--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,9 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:5.12.0'
 	testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 
-
-
+	// for the panl editor
 	implementation "com.formdev:flatlaf:3.5.1"
+	implementation 'org.apache.commons:commons-lang3:3.17.0'
 
 
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
