--- a/src/main/resources/panl.properties.template
+++ b/src/main/resources/panl.properties.template
@@ -36,7 +36,7 @@
 #solrj.client=Http2SolrClient
 #solrj.client=HttpJdkSolrClient
 #solrj.client=LBHttp2SolrClient
-solrj.client=CloudSolrClient
+$solrj.client
 
 #                           Which URLs To Connect To
 #                           ----- ---- -- ------- --
@@ -62,7 +62,7 @@ solrj.client=CloudSolrClient
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
+$solr.search.server.url
 
 #                      Whether To Enable The Testing URLs
 #                      ------- -- ------ --- ------- ----
