--- a/build.gradle
+++ b/build.gradle
@@ -123,10 +123,10 @@ task copyLoggingFile {
 
 tasks.startScripts.doLast {
 	def unixScriptFile = file getUnixScript()
-	unixScriptFile.text = unixScriptFile.text.replace('DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-Dlog4j.configurationFile=lib/log4j2.xml"')
+	unixScriptFile.text = unixScriptFile.text.replace('DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-Dlog4j2.configurationFile=lib/log4j2.xml"')
 
 	def windowsScriptFile = file getWindowsScript()
-	windowsScriptFile.text = windowsScriptFile.text.replace('set DEFAULT_JVM_OPTS=', 'set DEFAULT_JVM_OPTS=-Dlog4j.configurationFile=lib\\log4j2.xml')
+	windowsScriptFile.text = windowsScriptFile.text.replace('set DEFAULT_JVM_OPTS=', 'set DEFAULT_JVM_OPTS=-Dlog4j2.configurationFile=lib\\log4j2.xml')
 }
 
 //
