Added in panl.param.passthrough.canonical as a template variable

--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -138,7 +138,7 @@ $panl.param.page
 $panl.param.numrows
 $panl.param.query.operand
 $panl.param.passthrough
-panl.param.passthrough.canonical=false
+$panl.param.passthrough.canonical
 
 #                         The Form Query To Respond To
 #                         --- ---- ----- -- ------- --
