--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,10 @@ dependencies {
 	// testing
 	testImplementation platform('org.junit:junit-bom:5.9.1')
 	testImplementation 'org.junit.jupiter:junit-jupiter'
-	testImplementation 'org.mockito:mockito-core:5.12.0'
+	testImplementation 'org.mockito:mockito-core:5.14.2'
+	testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 	testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+	testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
 
 	// for the panl editor
 	implementation "com.formdev:flatlaf:3.5.1"
@@ -109,7 +111,12 @@ distributions {
 			force "org.slf4j:slf4j-api:2.0.13",
 					"commons-io:commons-io:2.16.1",
 					"com.fasterxml.jackson.core:jackson-databind:2.17.1",
-					"com.fasterxml.jackson.core:jackson-annotations:2.17.1"
+					"com.fasterxml.jackson.core:jackson-annotations:2.17.1",
+					"org.mockito:mockito-core:5.14.2",
+					"net.bytebuddy:byte-buddy:1.15.4",
+					"net.bytebuddy:byte-buddy-agent:1.15.4",
+					"org.objenesis:objenesis:3.3"
+
 		}
 	}
 }
