--- a/src/test/resources/sample/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils.panl.properties
@@ -96,7 +96,7 @@
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.lpse.length
+#ERROR - Expecting key of 'panl.lpse.length' but was not found.
 
 #                                 Panl Metadata
 #                                 ---- --------
@@ -132,13 +132,13 @@ $panl.lpse.length
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.param.query
-$panl.param.sort
-$panl.param.page
-$panl.param.numrows
-$panl.param.query.operand
-$panl.param.passthrough
-$panl.param.passthrough.canonical
+#ERROR - Expecting key of 'panl.param.query' but was not found.
+#ERROR - Expecting key of 'panl.param.sort' but was not found.
+#ERROR - Expecting key of 'panl.param.page' but was not found.
+#ERROR - Expecting key of 'panl.param.numrows' but was not found.
+#ERROR - Expecting key of 'panl.param.query.operand' but was not found.
+#ERROR - Expecting key of 'panl.param.passthrough' but was not found.
+panl.param.passthrough.canonical=false
 
 #                         The Form Query To Respond To
 #                         --- ---- ----- -- ------- --
@@ -158,7 +158,6 @@ $panl.param.passthrough.canonical
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.form.query.respondto=q
 
 
 #                     Whether to include single facets
@@ -177,7 +176,6 @@ panl.form.query.respondto=q
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.include.single.facets=false
 
 #                    Whether to include same number facets
 #                    ------- -- ------- ---- ------ ------
@@ -194,7 +192,6 @@ panl.include.single.facets=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.include.same.number.facets=false
 
 #                         The Default Query Operand
 #                         --- ------- ----- -------
@@ -213,7 +210,6 @@ panl.include.same.number.facets=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.default.query.operand=-
 
 #           The Default Maximum Number Of Facet Values To Return
 #           --- ------- ------- ------ -- ----- ------ -- ------
@@ -226,7 +222,6 @@ solr.default.query.operand=-
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.limit=100
 
 #                        The Minimum Facet Value Count
 #                        --- ------- ----- ----- -----
@@ -235,7 +230,6 @@ solr.facet.limit=100
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.facet.min.count=1
 
 #               The Default Number of Rows (Documents) To Return
 #               --- ------- ------ -- ---- ----------- -- ------
@@ -256,8 +250,6 @@ solr.facet.min.count=1
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.numrows.default=10
-solr.numrows.lookahead=5
 
 #          Whether to return search results with highlight markup
 #          ------- -- ------ ------ ------- ---- --------- ------
@@ -270,7 +262,6 @@ solr.numrows.lookahead=5
 #   solr.highlight=false
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.highlight=false
 
 #                             Panl Facet Configuration
 #                             ---- ----- -------------
@@ -415,7 +406,7 @@ solr.highlight=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.lpse.fields
+#ERROR - Expecting key of 'panl.lpse.fields' but was not found.
 
 #                        Panl LPSE Order Configuration
 #                        ---- ---- ----- -------------
@@ -441,7 +432,7 @@ $panl.lpse.fields
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.lpse.order
+#ERROR - Expecting key of 'panl.lpse.order' but was not found.
 
 #                        Panl LPSE Ignore Configuration
 #                        ---- ---- ------ -------------
@@ -456,7 +447,6 @@ $panl.lpse.order
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.ignore=
 
 #                        Panl Results Field Configuration
 #                        ---- ------- ----- -------------
@@ -486,8 +476,8 @@ panl.lpse.ignore=
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.results.fields.default
-$panl.results.fields.firstfive
+#ERROR - Expecting key of 'panl.results.fields.default' but was not found.
+#ERROR - Expecting key of 'panl.results.fields.firstfive' but was not found.
 
 #                         Panl Sort Field Configuration
 #                         ---- ---- ----- -------------
@@ -497,4 +487,3 @@ $panl.results.fields.firstfive
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.sort.fields=
