--- a/src/test/resources/sample/panl.properties
+++ b/src/test/resources/sample/panl.properties
@@ -36,7 +36,7 @@
 #solrj.client=Http2SolrClient
 #solrj.client=HttpJdkSolrClient
 #solrj.client=LBHttp2SolrClient
-$solrj.client
+solrj.client=CloudSolrClient
 
 #                           Which URLs To Connect To
 #                           ----- ---- -- ------- --
@@ -62,7 +62,7 @@ $solrj.client
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$solr.search.server.url
+solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 
 #                      Whether To Enable The Testing URLs
 #                      ------- -- ------ --- ------- ----
@@ -81,7 +81,7 @@ $solr.search.server.url
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.results.testing.urls
+panl.results.testing.urls=true
 
 #                     Whether To Enable Verbose Error Messaging
 #                     ------- -- ------ ------- ----- ---------
@@ -95,8 +95,8 @@ $panl.results.testing.urls
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.status.404.verbose
-$panl.status.500.verbose
+panl.status.404.verbose=true
+panl.status.500.verbose=true
 
 #                            Decimal Values Format
 #                            ------- ------ ------
@@ -119,7 +119,7 @@ $panl.status.500.verbose
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.decimal.point
+panl.decimal.point=true
 
 #                      Collection Property File Inclusion
 #                      ---------- -------- ---- ---------
