Changes to the generator

--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -79,17 +79,17 @@
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-#$                                ~ ~ ~ * ~ ~ ~
-#$
-#$  NOTE: any line in this file that starts with a dollar sign are used by the
-#$        panl generator for in-line replacement, and are __NOT__ properties
-#$        that can be set.  (These lines will not appear in the output
-#$        properties file)
-#$
-#$                                ~ ~ ~ * ~ ~ ~
+$                                ~ ~ ~ * ~ ~ ~
+$
+$  NOTE: Any line in this file that starts with a dollar sign (and at least one
+$        whitespace character) is used by the panl generator for in-line
+$        replacement, and are __NOT__ replacement properties that can be set.
+$        (These lines will not appear in the output properties file.)
+$
+$                                ~ ~ ~ * ~ ~ ~
 
-#                               Panl LPSE Length
-#                               ---- ---- ------
+#                              Panl LPSE Length
+#                              ---- ---- ------
 # The length (or number of characters) for each of the LPSE codes for the
 # facet and normal field.  This length does not apply to the Panl metadata
 # LPSE codes which are __ALWAYS__ of length 1 (one)
@@ -98,8 +98,8 @@
 
 $panl.lpse.length
 
-#                                 Panl Metadata
-#                                 ---- --------
+#                                Panl Metadata
+#                                ---- --------
 # The following are considered metadata that changes what results are returned
 # and in what format.  These are not considered facets, however they
 # __DO_NOT__ conform to the panl.lpse.length property above and are __ALWAYS__
@@ -140,8 +140,8 @@ $panl.param.query.operand
 $panl.param.passthrough
 $panl.param.passthrough.canonical
 
-#                         The Form Query To Respond To
-#                         --- ---- ----- -- ------- --
+#                        The Form Query To Respond To
+#                        --- ---- ----- -- ------- --
 # In the below HTML form definition, the 'q' named parameter is passed through
 # to the Panl server, which is then parsed and send through to the Solr search
 # sever as the Solr Query 'q' parameter.
@@ -161,8 +161,8 @@ $panl.param.passthrough.canonical
 panl.form.query.respondto=q
 
 
-#                     Whether to include single facets
-#                     ------- -- ------- ------ ------
+#                      Whether To Include Single Facets
+#                      ------- -- ------- ------ ------
 # Facets that only include a single result to further refine the query will not
 # be included by default.  The reasoning behind this is that having a list of
 # facets with only one result will not refine the query at all, it will simply
@@ -179,7 +179,7 @@ panl.form.query.respondto=q
 
 panl.include.single.facets=false
 
-#                    Whether to include same number facets
+#                    Whether To Include Same Number Facets
 #                    ------- -- ------- ---- ------ ------
 # Facets that include the same number of results as the number of found
 # documents will not be included by default.  The reasoning behind this is that
@@ -196,8 +196,8 @@ panl.include.single.facets=false
 
 panl.include.same.number.facets=false
 
-#                         The Default Query Operand
-#                         --- ------- ----- -------
+#                          The Default Query Operand
+#                          --- ------- ----- -------
 # This maps to the Solr q.op parameter, by default it is OR (the '-') character
 # - i.e. the search query will need to be in one of the search fields.
 #
@@ -215,8 +215,8 @@ panl.include.same.number.facets=false
 
 solr.default.query.operand=-
 
-#           The Default Maximum Number Of Facet Values To Return
-#           --- ------- ------- ------ -- ----- ------ -- ------
+#            The Default Maximum Number Of Facet Values To Return
+#            --- ------- ------- ------ -- ----- ------ -- ------
 # This is not a required property, the default set by Solr is 100, you may
 # change this to any positive integer value (see note below).  This works on a
 # per-facet basis so the maximum number of facet values that are returned for
@@ -237,8 +237,8 @@ solr.facet.limit=100
 
 solr.facet.min.count=1
 
-#               The Default Number of Rows (Documents) To Return
-#               --- ------- ------ -- ---- ----------- -- ------
+#              The Default Number of Rows (Documents) To Return
+#              --- ------- ------ -- ---- ----------- -- ------
 # The Solr default is 10 documents to be returned, however, this may be set to
 # any positive integer value.  There are two number of results that can be
 # returned, one for the faceted document results, and the other for the
@@ -259,8 +259,8 @@ solr.facet.min.count=1
 solr.numrows.default=10
 solr.numrows.lookahead=5
 
-#          Whether to return search results with highlight markup
-#          ------- -- ------ ------ ------- ---- --------- ------
+#           Whether To Return Search Results With Highlight Markup
+#           ------- -- ------ ------ ------- ---- --------- ------
 # This controls whether Solr will surround found search query text with markup,
 # with the markup being defined in the solrconfig.xml file (see line ~1060 in
 # the included sample configuration files).
@@ -272,8 +272,8 @@ solr.numrows.lookahead=5
 
 solr.highlight=false
 
-#                             Panl Facet Configuration
-#                             ---- ----- -------------
+#                          Panl Facet Configuration
+#                          ---- ----- -------------
 # The panl facets that are in use by this collection.  The format is:
 #     panl.facet.<code>=<solr_field>
 #     panl.name.<code>=<field_name>
@@ -443,8 +443,8 @@ $panl.lpse.fields
 
 $panl.lpse.order
 
-#                        Panl LPSE Ignore Configuration
-#                        ---- ---- ------ -------------
+#                       Panl LPSE Ignore Configuration
+#                       ---- ---- ------ -------------
 # Any LPSE code listed below will be ignored and not returned in either the
 # active or available filters JSON object
 #
@@ -458,8 +458,8 @@ $panl.lpse.order
 
 panl.lpse.ignore=
 
-#                        Panl Results Field Configuration
-#                        ---- ------- ----- -------------
+#                      Panl Results Field Configuration
+#                      ---- ------- ----- -------------
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
@@ -489,8 +489,8 @@ panl.lpse.ignore=
 $panl.results.fields.default
 $panl.results.fields.firstfive
 
-#                         Panl Sort Field Configuration
-#                         ---- ---- ----- -------------
+#                        Panl Sort Field Configuration
+#                        ---- ---- ----- -------------
 # Below are the fields that are configured to be able to be sorted on, these
 # fields must either be defined as a panl.facet or a panl.field and __MUST__ be
 # the Solr field name.
