--- a/src/main/resources/panl.properties.template
+++ b/src/main/resources/panl.properties.template
@@ -1,22 +1,31 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#                                              __                             #
-#                          .-----.---.-.-----.|  |                            #
-#                          |  _  |  _  |     ||  |                            #
-#                          |   __|___._|__|__||__|                            #
-#                          |__|     ... .-..                                  #
+#                                               __                            #
+#                           .-----.---.-.-----.|  |                           #
+#                           |  _  |  _  |     ||  |                           #
+#                           |   __|___._|__|__||__|                           #
+#                           |__|     ... .-..                                 #
 #                                                                             #
 #                                ~ ~ ~ * ~ ~ ~                                #
 #                                                                             #
-#                PANL/SOLR SERVER CONNECTION CONFIGURATION                    #
-#                --------- ------ ---------- -------------                    #
+#                  PANL/SOLR SERVER CONNECTION CONFIGURATION                  #
+#                  --------- ------ ---------- -------------                  #
 #                                                                             #
 # This is the Panl configuration file which configures the base functionality #
 # and defines how Panl will connect to the Solr server.                       #
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-#                            Which Solr Client To Use
-#                            ----- ---- ------ -- ---
+$                                ~ ~ ~ * ~ ~ ~
+$
+$  NOTE: Any line in this file that starts with a dollar sign (and at least one
+$        whitespace character) is used by the panl generator for in-line
+$        replacement, and are __NOT__ replacement properties that can be set.
+$        (These lines will not appear in the output properties file.)
+$
+$                                ~ ~ ~ * ~ ~ ~
+
+#                           Which Solr Client To Use
+#                           ----- ---- ------ -- ---
 # Choose the correct SolrJ client for the Solr installation that you require,
 # by default, it is the CloudSolrClient.
 #
@@ -36,10 +45,11 @@
 #solrj.client=Http2SolrClient
 #solrj.client=HttpJdkSolrClient
 #solrj.client=LBHttp2SolrClient
+#solrj.client=CloudSolrClient
 $solrj.client
 
-#                           Which URLs To Connect To
-#                           ----- ---- -- ------- --
+#                        Which Solr URLs To Connect To
+#                        ----- ---- ---- -- ------- --
 # Dependent on which Solr server installation you have, and consequently the
 # SolrJ Client that is configured, this will either be a single url, or a comma
 # separated list of URLs
@@ -64,8 +74,8 @@ $solrj.client
 
 $solr.search.server.url
 
-#                      Whether To Enable The Testing URLs
-#                      ------- -- ------ --- ------- ----
+#                     Whether To Enable The Testing URLs
+#                     ------- -- ------ --- ------- ----
 # The Panl results viewer / explainer URLs, this is a simple web app which will
 # allow you to test and explain the collections and the URLs that are
 # generated, including fields, faceting, querying, sorting, and results.
@@ -83,8 +93,8 @@ $solr.search.server.url
 
 $panl.results.testing.urls
 
-#                     Whether To Enable Verbose Error Messaging
-#                     ------- -- ------ ------- ----- ---------
+#                  Whether To Enable Verbose Error Messaging
+#                  ------- -- ------ ------- ----- ---------
 # Whether verbose messaging is turned on for the error (404 / 500) http status
 # messages.  Verbose messaging for the 404 error will provide valid URI paths
 # to connect to.  Verbose messaging for the 500 error will provide a
@@ -121,8 +131,8 @@ $panl.status.500.verbose
 
 $panl.decimal.point
 
-#                      Collection Property File Inclusion
-#                      ---------- -------- ---- ---------
+#                     Collection Property File Inclusion
+#                     ---------- -------- ---- ---------
 # Each property file defines a singular collection, with the associated
 # properties and configuration.  The format of the property is:
 #
