--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,10 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:5.14.2'
 	testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 	testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
-	testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+	testImplementation 'commons-codec:commons-codec:1.17.1'
 
-	// for the panl editor
+
+		// for the panl editor
 	implementation "com.formdev:flatlaf:3.5.1"
 	implementation 'org.apache.commons:commons-lang3:3.17.0'
 
@@ -115,7 +116,8 @@ distributions {
 					"org.mockito:mockito-core:5.14.2",
 					"net.bytebuddy:byte-buddy:1.15.4",
 					"net.bytebuddy:byte-buddy-agent:1.15.4",
-					"org.objenesis:objenesis:3.3"
+					"org.objenesis:objenesis:3.3",
+					"commons-codec:commons-codec:1.17.1"
 
 		}
 	}
