Changed default panl.form.query.respond.to value from 'q' to 'search'

--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -150,7 +150,7 @@ panl.param.passthrough.canonical=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.form.query.respondto=q
+panl.form.query.respondto=search
 
 
 #                      Whether To Include Single Facets
