--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -158,7 +158,7 @@ $panl.param.passthrough.canonical
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.form.query.respondto=q
+panl.form.query.respondto=search
 
 
 #                      Whether To Include Single Facets
