--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -150,7 +150,7 @@ panl.param.passthrough.canonical=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.form.query.respondto=q
+panl.form.query.respondto=search
 
 
 #                      Whether To Include Single Facets
